Closed Bug 1280373 Opened 8 years ago Closed 8 years ago

[webvtt] fix html/semantics/embedded-content/media-elements/interfaces/TextTrack/label.html

Categories

(Core :: Audio/Video: Playback, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla50
Tracking Status
firefox50 --- fixed

People

(Reporter: bechen, Assigned: bechen)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

      No description provided.
Comment on attachment 8763173 [details]
Bug 1280373 - Fix the label and language attribute in TextTrack object.

https://reviewboard.mozilla.org/r/59476/#review56608
Attachment #8763173 - Flags: review?(giles) → review+
Comment on attachment 8763173 [details]
Bug 1280373 - Fix the label and language attribute in TextTrack object.

Review request updated; see interdiff: https://reviewboard.mozilla.org/r/59476/diff/1-2/
Keywords: checkin-needed
Pushed by cbook@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/589018d53fc5
Fix the label and language attribute in TextTrack object. r=rillian
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/589018d53fc5
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: