Bug 1280373 - Fix the label and language attribute in TextTrack object. r=rillian

MozReview-Commit-ID: 2NFJ5fCCkDy